# mytcas-dashboard

./: README.md  pyproject.toml
data/: data.csv  data_mark_01.csv  province.py
mytcas_dashboard/: app.py  data_preparation.py
