[tool.poetry]
name = "mytcas-dashboard"
version = "0.1.0"
description = ""
authors = ["Chakapat Suwannapong <jakkapat.j7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.17.1"
dash-bootstrap-components = "^1.6.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
